fixed spacing

--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -6,7 +6,7 @@
     display: flex;
     justify-content: center;
     width: 100%;
-    height: 8rem;
+    // height: 8rem;
     @include desktop{
         justify-content: flex-start;
     }
@@ -20,8 +20,12 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    font-family: 'Montserrat';
+    font-style: italic;
+    font-weight: 900;
     font-size: 3rem;
     margin: .5rem;
+
     @include tablet {
         font-size: 4rem;
     }
@@ -34,21 +38,4 @@
         color: white;
     }
 }
-// .contact{
-//     display: flex;
-//     flex-direction: column;
-//     align-self: center;
-//     font-size: 3rem;
-//     margin-right: 5rem;
-//     &:hover{
-//         // background-color: green;
-//         border-radius: 2rem;
-//         filter: drop-shadow(0 0 0.10rem white);
-//     }
-    
-//     &__text{
-//         color: white; 
-//         padding: .5rem;
-//     }
-// }
 
